[package]
name = "bcp"
version = "0.1.0"
authors = ["Drnd1 <drndivoje@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
human-panic = "1.0.3"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"